--- a/client/src/main/webapp/css/style.css
+++ b/client/src/main/webapp/css/style.css
@@ -304,6 +304,13 @@ footer {
     background-color: transparent;
 }
 
+.modal {
+    top: 10px;
+    width: 250px;
+    padding: 20px;
+    margin: 0 0 0 -135px;
+}
+
 .color-picker {
     clear: both;
 }
@@ -459,6 +466,17 @@ footer {
 
 @media (max-width: 500px) {
 
+}
+
+@media (max-width: 480px) {
+    .modal {
+        top: 10px;
+        right: 10px;
+        left: 10px;
+        width: auto;
+        padding: 20px;
+        margin: 0;
+    }
 }
 
 * {
